chore(pre-commit): Run `pre-commit prettier` in the repo

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 globs:
-  - "specs/**/*.md"
+  - 'specs/**/*.md'
 
 # markdownlint rule configuration
 config:
