--- a/tests/scenarios/demo_screenshot_test.yaml
+++ b/tests/scenarios/demo_screenshot_test.yaml
@@ -2,26 +2,26 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: demo_screenshot_test
-tags: ["cli", "tui", "local"]
+tags: ['cli', 'tui', 'local']
 timeline:
   - think:
-      - [100, "Thinking about creating hello.py"]
-  - screenshot: "thinking"
+      - [100, 'Thinking about creating hello.py']
+  - screenshot: 'thinking'
   - agentToolUse:
-      toolName: "run_command"
+      toolName: 'run_command'
       args:
         command: "echo 'Creating hello.py'"
-        cwd: "."
+        cwd: '.'
       progress:
-        - [50, "Running echo command..."]
-      result: "Creating hello.py"
-      status: "ok"
-  - screenshot: "command_done"
+        - [50, 'Running echo command...']
+      result: 'Creating hello.py'
+      status: 'ok'
+  - screenshot: 'command_done'
   - agentEdits:
-      path: "hello.py"
+      path: 'hello.py'
       linesAdded: 1
       linesRemoved: 0
-  - screenshot: "file_created"
+  - screenshot: 'file_created'
   - assistant:
-      - [200, "Demo screenshot test completed successfully"]
+      - [200, 'Demo screenshot test completed successfully']
   - complete: true
