--- a/tests/tools/mock-agent/scenarios/realistic_development_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/realistic_development_scenario.yaml
@@ -2,16 +2,16 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: realistic_development_scenario
-initialPrompt: "Add proper division by zero handling to the calculator.py file"
+initialPrompt: 'Add proper division by zero handling to the calculator.py file'
 repo:
   init: true
   files:
-    - path: "README.md"
+    - path: 'README.md'
       contents: |
         # Calculator App
 
         A simple calculator application.
-    - path: "calculator.py"
+    - path: 'calculator.py'
       contents: |
         def add(a, b):
             return a + b
@@ -31,75 +31,111 @@ timeline:
   # Agent starts working on the task
   - llmResponse:
       - think:
-          - [2000, "User wants me to add division by zero handling to the calculator. Let me examine the current code first."]
-          - [1500, "Looking at the calculator.py file to understand the current implementation."]
+          - [
+              2000,
+              'User wants me to add division by zero handling to the calculator. Let me examine the current code first.',
+            ]
+          - [1500, 'Looking at the calculator.py file to understand the current implementation.']
       - assistant:
           - [500, "I'll start by examining the current calculator implementation."]
 
   # Agent reads the current code
   - agentToolUse:
-      toolName: "readFile"
+      toolName: 'readFile'
       args:
-        path: "calculator.py"
-      result: "File read successfully"
-      status: "ok"
+        path: 'calculator.py'
+      result: 'File read successfully'
+      status: 'ok'
 
   # Agent analyzes the code and plans the fix
   - llmResponse:
       - think:
-          - [2500, "I can see the calculator has basic arithmetic operations but the divide function doesn't handle division by zero. I need to add proper error handling."]
+          - [
+              2500,
+              "I can see the calculator has basic arithmetic operations but the divide function doesn't handle division by zero. I need to add proper error handling.",
+            ]
           - [1200, "I'll modify the divide function to raise a ValueError when dividing by zero."]
       - assistant:
-          - [1000, "I can see the calculator code. The divide function currently performs direct division without checking for division by zero. I'll implement proper error handling."]
+          - [
+              1000,
+              "I can see the calculator code. The divide function currently performs direct division without checking for division by zero. I'll implement proper error handling.",
+            ]
 
   # Agent implements the fix
   - agentToolUse:
-      toolName: "runCmd"
+      toolName: 'runCmd'
       args:
-        command: "cd /workspace && python -c \"import calculator; print('Testing current divide function...'); calculator.divide(10, 2); print('10/2 =', calculator.divide(10, 2))\""
-        cwd: "."
-      result: "10/2 = 5.0"
-      status: "ok"
+        command: 'cd /workspace && python -c "import calculator; print(''Testing current divide function...''); calculator.divide(10, 2); print(''10/2 ='', calculator.divide(10, 2))"'
+        cwd: '.'
+      result: '10/2 = 5.0'
+      status: 'ok'
 
   # Agent tests division by zero and encounters the error, then asks user for guidance
   - llmResponse:
       - think:
-          - [3000, "Good, the basic functionality works. Now I need to test the division by zero case and add proper error handling. Let me first try dividing by zero to see what happens."]
-          - [1500, "Actually, let me think about this more carefully. The user wants me to add division by zero handling. I should first test what happens when we try to divide by zero with the current code."]
+          - [
+              3000,
+              'Good, the basic functionality works. Now I need to test the division by zero case and add proper error handling. Let me first try dividing by zero to see what happens.',
+            ]
+          - [
+              1500,
+              'Actually, let me think about this more carefully. The user wants me to add division by zero handling. I should first test what happens when we try to divide by zero with the current code.',
+            ]
       - assistant:
-          - [2000, "I see that dividing by zero causes a ZeroDivisionError. I need to add proper error handling to the divide function."]
-          - [2500, "What approach would you like me to take for handling division by zero? Should I raise a custom ValueError, return None, or handle it differently?"]
+          - [
+              2000,
+              'I see that dividing by zero causes a ZeroDivisionError. I need to add proper error handling to the divide function.',
+            ]
+          - [
+              2500,
+              'What approach would you like me to take for handling division by zero? Should I raise a custom ValueError, return None, or handle it differently?',
+            ]
 
   # Agent tests division by zero and encounters the error
   - agentToolUse:
-      toolName: "runCmd"
+      toolName: 'runCmd'
       args:
-        command: "cd /workspace && python -c \"import calculator; calculator.divide(10, 0)\" 2>&1 || echo 'Division by zero caused an error'"
-        cwd: "."
-      result: "Traceback (most recent call last): ZeroDivisionError: division by zero"
-      status: "ok"
+        command: 'cd /workspace && python -c "import calculator; calculator.divide(10, 0)" 2>&1 || echo ''Division by zero caused an error'''
+        cwd: '.'
+      result: 'Traceback (most recent call last): ZeroDivisionError: division by zero'
+      status: 'ok'
 
   # Agent realizes the issue and asks user for guidance
   - assistant:
-      - [2000, "I see that dividing by zero causes a ZeroDivisionError. I need to add proper error handling to the divide function."]
-      - [2500, "What approach would you like me to take for handling division by zero? Should I raise a custom ValueError, return None, or handle it differently?"]
+      - [
+          2000,
+          'I see that dividing by zero causes a ZeroDivisionError. I need to add proper error handling to the divide function.',
+        ]
+      - [
+          2500,
+          'What approach would you like me to take for handling division by zero? Should I raise a custom ValueError, return None, or handle it differently?',
+        ]
 
   # User provides helpful tip (simulated as userInputs)
   - userInputs:
-      - [1000, "Please raise a ValueError with a clear message when dividing by zero."]
-    target: "tui"
+      - [1000, 'Please raise a ValueError with a clear message when dividing by zero.']
+    target: 'tui'
 
   # Agent acknowledges the user's input and implements the fix
   - llmResponse:
       - think:
-          - [1800, "The user wants me to raise a ValueError with a clear message for division by zero. That's a good approach."]
-          - [800, "Now I'll implement the fix by modifying the divide function to check for division by zero before performing the division."]
+          - [
+              1800,
+              "The user wants me to raise a ValueError with a clear message for division by zero. That's a good approach.",
+            ]
+          - [
+              800,
+              "Now I'll implement the fix by modifying the divide function to check for division by zero before performing the division.",
+            ]
       - assistant:
-          - [1000, "Got it! I'll implement the division by zero check by raising a ValueError with a clear message."]
+          - [
+              1000,
+              "Got it! I'll implement the division by zero check by raising a ValueError with a clear message.",
+            ]
 
   # Agent implements the fix
   - agentToolUse:
-      toolName: "runCmd"
+      toolName: 'runCmd'
       args:
         command: |
           cd /workspace && python -c "
@@ -124,30 +160,30 @@ timeline:
 
           print('Modified divide function to handle division by zero')
           "
-        cwd: "."
-      result: "Modified divide function to handle division by zero"
-      status: "ok"
+        cwd: '.'
+      result: 'Modified divide function to handle division by zero'
+      status: 'ok'
 
   # Agent tests the fix
   - agentToolUse:
-      toolName: "runCmd"
+      toolName: 'runCmd'
       args:
-        command: "cd /workspace && python -c \"import calculator; print('Testing normal division:'); print('10/2 =', calculator.divide(10, 2)); print('Testing division by zero:'); calculator.divide(10, 0)\" 2>&1 || echo 'Error caught successfully'"
-        cwd: "."
-      result: "Testing normal division: 10/2 = 5.0 Testing division by zero: Traceback (most recent call last): ValueError: Cannot divide by zero"
-      status: "ok"
+        command: 'cd /workspace && python -c "import calculator; print(''Testing normal division:''); print(''10/2 ='', calculator.divide(10, 2)); print(''Testing division by zero:''); calculator.divide(10, 0)" 2>&1 || echo ''Error caught successfully'''
+        cwd: '.'
+      result: 'Testing normal division: 10/2 = 5.0 Testing division by zero: Traceback (most recent call last): ValueError: Cannot divide by zero'
+      status: 'ok'
 
   # Agent reads the updated file to verify the changes
   - agentToolUse:
-      toolName: "readFile"
+      toolName: 'readFile'
       args:
-        path: "calculator.py"
-      result: "File read successfully"
-      status: "ok"
+        path: 'calculator.py'
+      result: 'File read successfully'
+      status: 'ok'
 
   # Agent runs comprehensive tests
   - agentToolUse:
-      toolName: "runCmd"
+      toolName: 'runCmd'
       args:
         command: |
           cd /workspace && python -c "
@@ -171,15 +207,15 @@ timeline:
 
           print('All tests passed!')
           "
-        cwd: "."
-      result: "Testing all calculator functions... add(5, 3) = 8 subtract(10, 4) = 6 multiply(6, 7) = 42 divide(15, 3) = 5.0 divide(10, 2) = 5.0 Error handling works: Cannot divide by zero All tests passed!"
-      status: "ok"
+        cwd: '.'
+      result: 'Testing all calculator functions... add(5, 3) = 8 subtract(10, 4) = 6 multiply(6, 7) = 42 divide(15, 3) = 5.0 divide(10, 2) = 5.0 Error handling works: Cannot divide by zero All tests passed!'
+      status: 'ok'
 
   # Agent creates a proper test file
   - agentToolUse:
-      toolName: "writeFile"
+      toolName: 'writeFile'
       args:
-        path: "test_calculator.py"
+        path: 'test_calculator.py'
         text: |
           import calculator
 
@@ -213,17 +249,17 @@ timeline:
               test_divide()
               test_divide_by_zero()
               print("All tests passed!")
-      result: "Test file created"
-      status: "ok"
+      result: 'Test file created'
+      status: 'ok'
 
   # Agent runs the test suite
   - agentToolUse:
-      toolName: "runCmd"
+      toolName: 'runCmd'
       args:
-        command: "cd /workspace && python test_calculator.py"
-        cwd: "."
-      result: "All tests passed!"
-      status: "ok"
+        command: 'cd /workspace && python test_calculator.py'
+        cwd: '.'
+      result: 'All tests passed!'
+      status: 'ok'
 
   # Keep the session open for interactive use
   - assistant:
