--- a/test_scenarios/timing_test_scenario.yaml
+++ b/test_scenarios/timing_test_scenario.yaml
@@ -2,12 +2,12 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: timing_test_scenario
-description: "Scenario for testing SSE event timing verification"
-tags: ["test", "timing"]
+description: 'Scenario for testing SSE event timing verification'
+tags: ['test', 'timing']
 repo:
   init: true
   files:
-    - path: "README.md"
+    - path: 'README.md'
       contents: |
         # Timing Test Scenario
 
@@ -16,47 +16,47 @@ timeline:
   # Start with thinking events at specific times
   - llmResponse:
       - think:
-          - [500, "Starting timing test scenario"]
-          - [300, "Analyzing timing requirements"]
+          - [500, 'Starting timing test scenario']
+          - [300, 'Analyzing timing requirements']
       - assistant:
-          - [100, "Beginning timing verification process"]
+          - [100, 'Beginning timing verification process']
 
   # First tool execution after 800ms total thinking time
   - agentToolUse:
-      toolName: "run_command"
+      toolName: 'run_command'
       args:
         command: "echo 'Timing test started'"
-        cwd: "."
+        cwd: '.'
       progress:
-        - [100, "Preparing timing test..."]
-        - [200, "Running timing verification..."]
-      result: "Timing test started"
-      status: "ok"
+        - [100, 'Preparing timing test...']
+        - [200, 'Running timing verification...']
+      result: 'Timing test started'
+      status: 'ok'
 
   # File edit event
   - agentEdits:
-      path: "timing_test.txt"
+      path: 'timing_test.txt'
       linesAdded: 3
       linesRemoved: 0
 
   # More thinking
   - llmResponse:
       - think:
-          - [400, "Processing timing results"]
-          - [200, "Preparing final verification"]
+          - [400, 'Processing timing results']
+          - [200, 'Preparing final verification']
       - assistant:
-          - [150, "Timing verification completed successfully"]
+          - [150, 'Timing verification completed successfully']
 
   # Final tool execution
   - agentToolUse:
-      toolName: "run_command"
+      toolName: 'run_command'
       args:
         command: "echo 'Timing test completed'"
-        cwd: "."
+        cwd: '.'
       progress:
-        - [150, "Finalizing timing test..."]
-      result: "Timing test completed"
-      status: "ok"
+        - [150, 'Finalizing timing test...']
+      result: 'Timing test completed'
+      status: 'ok'
 
   # Mark scenario as complete and merge to keep in session listings
   - complete: true
@@ -65,7 +65,7 @@ timeline:
 expect:
   exitCode: 0
   artifacts:
-    - type: "taskFile"
-      pattern: "README.md"
-    - type: "taskFile"
-      pattern: "timing_test.txt"
+    - type: 'taskFile'
+      pattern: 'README.md'
+    - type: 'taskFile'
+      pattern: 'timing_test.txt'
