--- a/tests/tools/mock-agent/examples/tui_testing_scenario.yaml
+++ b/tests/tools/mock-agent/examples/tui_testing_scenario.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: tui_testing_scenario
-description: "Test scenario demonstrating TUI testing with screenshots and user commands"
+description: 'Test scenario demonstrating TUI testing with screenshots and user commands'
 repo:
   init: true
 timeline:
@@ -10,34 +10,37 @@ timeline:
       - think:
           - [500, "I'll start by creating a simple Python script and taking a screenshot."]
       - assistant:
-          - [300, "Created hello.py successfully. Let me run it to show the output."]
-  - screenshot: "initial_workspace"
+          - [300, 'Created hello.py successfully. Let me run it to show the output.']
+  - screenshot: 'initial_workspace'
   - agentToolUse:
-      toolName: "write_file"
+      toolName: 'write_file'
       args:
-        path: "hello.py"
+        path: 'hello.py'
         text: "print('Hello, World!')\nprint('TUI Testing Demo')\n"
-      result: "File created"
-      status: "ok"
-  - screenshot: "after_file_creation"
+      result: 'File created'
+      status: 'ok'
+  - screenshot: 'after_file_creation'
   - userCommand:
-      cmd: "python hello.py"
-      cwd: "."
-  - screenshot: "after_command_execution"
+      cmd: 'python hello.py'
+      cwd: '.'
+  - screenshot: 'after_command_execution'
   - assistant:
-      - [400, "The command executed successfully. Let me modify the file and take another screenshot."]
+      - [
+          400,
+          'The command executed successfully. Let me modify the file and take another screenshot.',
+        ]
   - agentToolUse:
-      toolName: "append_file"
+      toolName: 'append_file'
       args:
-        path: "hello.py"
+        path: 'hello.py'
         text: "print('Modified by agent!')\n"
-      result: "File appended"
-      status: "ok"
-  - screenshot: "after_file_modification"
+      result: 'File appended'
+      status: 'ok'
+  - screenshot: 'after_file_modification'
   - assistant:
       - [200, "Perfect! I've demonstrated the TUI testing workflow with multiple screenshots."]
 expect:
   exitCode: 0
   artifacts:
-    - type: "taskFile"
-      pattern: "hello.py"
+    - type: 'taskFile'
+      pattern: 'hello.py'
