--- a/tests/tools/mock-agent/scenarios/code_refactoring_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/code_refactoring_scenario.yaml
@@ -2,23 +2,23 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: code_refactoring_scenario
-initialPrompt: "Refactor the code to improve its structure"
+initialPrompt: 'Refactor the code to improve its structure'
 repo:
   init: true
 timeline:
   - think:
-      - [500, "Processing request for code_refactoring_scenario"]
+      - [500, 'Processing request for code_refactoring_scenario']
   - agentToolUse:
-      toolName: "writeFile"
+      toolName: 'writeFile'
       args:
-        path: "test.txt"
-        text: "Test content for code_refactoring_scenario"
-      result: "File created"
-      status: "ok"
+        path: 'test.txt'
+        text: 'Test content for code_refactoring_scenario'
+      result: 'File created'
+      status: 'ok'
   - assistant:
-      - [300, "Completed code_refactoring_scenario scenario"]
+      - [300, 'Completed code_refactoring_scenario scenario']
 expect:
   exitCode: 0
   artifacts:
-    - type: "taskFile"
-      pattern: "test.txt"
+    - type: 'taskFile'
+      pattern: 'test.txt'
