--- a/tests/tools/mock-agent/scenarios/feature_implementation_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/feature_implementation_scenario.yaml
@@ -2,23 +2,23 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: feature_implementation_scenario
-initialPrompt: "Create a test.txt file with test content"
+initialPrompt: 'Create a test.txt file with test content'
 repo:
   init: true
 timeline:
   - think:
-      - [500, "Processing request for feature_implementation_scenario"]
+      - [500, 'Processing request for feature_implementation_scenario']
   - agentToolUse:
-      toolName: "writeFile"
+      toolName: 'writeFile'
       args:
-        path: "test.txt"
-        text: "Test content for feature_implementation_scenario"
-      result: "File created"
-      status: "ok"
+        path: 'test.txt'
+        text: 'Test content for feature_implementation_scenario'
+      result: 'File created'
+      status: 'ok'
   - assistant:
-      - [300, "Completed feature_implementation_scenario scenario"]
+      - [300, 'Completed feature_implementation_scenario scenario']
 expect:
   exitCode: 0
   artifacts:
-    - type: "taskFile"
-      pattern: "test.txt"
+    - type: 'taskFile'
+      pattern: 'test.txt'
