--- a/tests/tools/mock-agent/scenarios/recorder_replay_test.yaml
+++ b/tests/tools/mock-agent/scenarios/recorder_replay_test.yaml
@@ -2,31 +2,31 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: recorder_replay_test
-initialPrompt: "Test replay functionality of the recorder"
-description: "E2E test for ah agent record and ah agent replay integration"
+initialPrompt: 'Test replay functionality of the recorder'
+description: 'E2E test for ah agent record and ah agent replay integration'
 repo:
   init: true
 timeline:
   - think:
       - [300, "I'll create a simple calculator module."]
   - agentToolUse:
-      toolName: "writeFile"
+      toolName: 'writeFile'
       args:
-        path: "calculator.py"
+        path: 'calculator.py'
         text: |
           def add(a, b):
               return a + b
 
           def subtract(a, b):
               return a - b
-      result: "Created calculator.py"
-      status: "ok"
+      result: 'Created calculator.py'
+      status: 'ok'
   - assistant:
-      - [200, "Created basic calculator functions."]
+      - [200, 'Created basic calculator functions.']
   - agentToolUse:
-      toolName: "appendFile"
+      toolName: 'appendFile'
       args:
-        path: "calculator.py"
+        path: 'calculator.py'
         text: |
 
           def multiply(a, b):
@@ -36,17 +36,20 @@ timeline:
               if b == 0:
                   raise ValueError("Cannot divide by zero")
               return a / b
-      result: "Added multiply and divide"
-      status: "ok"
+      result: 'Added multiply and divide'
+      status: 'ok'
   - assistant:
-      - [250, "Extended calculator with multiply and divide. The recording should capture this sequence of operations."]
+      - [
+          250,
+          'Extended calculator with multiply and divide. The recording should capture this sequence of operations.',
+        ]
 expect:
   exitCode: 0
   artifacts:
-    - type: "taskFile"
-      pattern: "calculator.py"
+    - type: 'taskFile'
+      pattern: 'calculator.py'
   recording:
-    format: "ahr"
+    format: 'ahr'
     blocks_min: 1
     contains_data_records: true
     contains_snapshot_records: true
