--- a/tests/tools/mock-agent/scenarios/timing_test_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/timing_test_scenario.yaml
@@ -2,23 +2,23 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: timing_test_scenario
-initialPrompt: "Test timing functionality"
+initialPrompt: 'Test timing functionality'
 repo:
   init: true
 timeline:
   - think:
-      - [500, "Processing request for timing_test_scenario"]
+      - [500, 'Processing request for timing_test_scenario']
   - agentToolUse:
-      toolName: "writeFile"
+      toolName: 'writeFile'
       args:
-        path: "test.txt"
-        text: "Test content for timing_test_scenario"
-      result: "File created"
-      status: "ok"
+        path: 'test.txt'
+        text: 'Test content for timing_test_scenario'
+      result: 'File created'
+      status: 'ok'
   - assistant:
-      - [300, "Completed timing_test_scenario scenario"]
+      - [300, 'Completed timing_test_scenario scenario']
 expect:
   exitCode: 0
   artifacts:
-    - type: "taskFile"
-      pattern: "test.txt"
+    - type: 'taskFile'
+      pattern: 'test.txt'
