--- a/webui/app/wrangler.jsonc
+++ b/webui/app/wrangler.jsonc
@@ -2,8 +2,6 @@
   "name": "agent-harbor-webui",
   "$schema": "./node_modules/wrangler/config-schema.json",
   "pages_build_output_dir": "dist",
-  "compatibility_flags": [
-    "nodejs_compat"
-  ],
-  "compatibility_date": "2024-09-23"
+  "compatibility_flags": ["nodejs_compat"],
+  "compatibility_date": "2024-09-23",
 }
