--- a/crates/ah-fs-snapshots-daemon/Cargo.toml
+++ b/crates/ah-fs-snapshots-daemon/Cargo.toml
@@ -10,19 +10,20 @@ edition = "2021"
 # Workspace dependencies
 tokio = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 ah-logging = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 libc = "0.2"
+agentfs-core = { path = "../agentfs-core" }
+once_cell = "1.19"
+tokio-util = { version = "0.7", features = ["rt"] }
 
 # SSZ serialization (TODO: implement proper SSZ)
 ethereum_ssz = { workspace = true }
 ethereum_ssz_derive = { workspace = true }
-
-# Temporary JSON serialization for length-prefixed protocol
-serde_json = { workspace = true }
 
 # Additional dependencies
 clap = { workspace = true, features = ["derive"] }
@@ -32,3 +33,4 @@ hex = "0.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
+tempfile = { workspace = true }
