--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "knip": "knip"
   },
   "devDependencies": {
-    "eslint": "9.37.0",
+    "@eslint/js": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "eslint": "^9.39.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-solid": "^0.14.5",
+    "globals": "^16.5.0",
     "knip": "^5.64.1",
     "prettier": "3.6.2",
     "typescript": "5.9.3",
+    "typescript-eslint": "^8.47.0",
     "vite": "^7.1.9",
     "wrangler": "^4.49.1"
   },
