--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -57,3 +57,4 @@ vt100 = { workspace = true }
 insta = { version = "1.40", features = ["json"] }
 anyhow = "1.0"
 serde_json = "1.0"
+tracing-subscriber = { workspace = true }
